--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,90 @@ RESPONSIVE NAVIGATION
         flex-direction: row;
     }
 }
+
+
+/*===========================================
+    Div row design
+===========================================*/
+
+.row{
+    display: flex;
+}
+
+/*===========================================
+    H2 style
+===========================================*/
+h2.title{
+    text-align: center;
+    padding: 30px 0 10px 0;
+}
+
+/*===========================================
+    Table style
+===========================================*/
+
+table.Atable{
+    margin:auto;
+    border: 0;
+    box-shadow: 1px 0 5px rgb(66, 66, 66);
+}
+
+table.Atable tr{
+    background-color: #fff;
+}
+
+table.Atable thead tr{
+    background-color: #794FCD;
+}
+
+table.Atable thead th{
+    color: #fff;
+}
+
+table.Atable th,td{
+    border: 0;
+    padding: 5px;
+    text-align: center;
+}
+
+/*===========================================
+    Table responsive style
+===========================================*/
+
+@media(max-width:650px){
+    .Atable{
+        border: 3px solid rgb(55, 53, 53);
+    }
+
+    .Atable thead tr{
+        display: none;
+    }
+
+    .Atable tr{
+        display: block; 
+    }
+    
+    .Atable th, .Atable td{
+        padding: 0.5em;
+    }
+
+    .Atable td{
+        text-align: right;
+        display: block;
+        font-size: 1em;
+    }
+
+    .Atable td.rowNumber{
+        background-color: #794FCD;
+        color: #EEF0F4;
+    }
+
+    .Atable td::before{
+        content: attr(data-title) ": ";
+        float:left;
+        font-weight: 900;
+       
+    }
+
+
+}
