--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
-*{
+/* style.css */
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: stretch;
+    background-color: #EEF0F4;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 30vh;
+}
+
+footer {
+    width: 100%;
+    height: 100px; /* Adjust height as needed */
+    background: #EEF0F4;
+    box-shadow: 0px -1px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
+    line-height: 35px; /* Center the text vertically */
+    margin-top: auto;
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -16,32 +46,16 @@ header {
     z-index: 99;
 }
 
-
-
-
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* min-height: 100vh; */
-    flex-direction: column;
-    align-items: stretch;
-    background-color: #EEF0F4;
-}
-
-
 /*===========================================
   NAVIGATION PART
 ===========================================*/
-.logo{
+.logo {
     font-weight: 500;
     color: #4C2894;
     user-select: none;
 }
 
-
-
-.navigation a{
+.navigation a {
     position: relative;
     font-size: 1.1em;
     color: #4C2894;
@@ -50,68 +64,142 @@ body{
     margin-left: 40px;
 }
 
-.navigation a::after{
-    content: '';
-    position:absolute;
-    left: 0 ;
-    bottom:-6px;
-    width: 100%;
-    height: 3px;
-    background-color: #4C2894;
-    border-radius: 5px;
-    transform: scaleX(0);
-    transition: transform .5s;
-}
+    .navigation a::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -6px;
+        width: 100%;
+        height: 3px;
+        background-color: #4C2894;
+        border-radius: 5px;
+        transform: scaleX(0);
+        transition: transform .5s;
+    }
 
-.navigation a.not_icon:hover::after{
-    transform: scaleX(1);
-}
+    .navigation a.not_icon:hover::after {
+        transform: scaleX(1);
+    }
 
 .navigation .icon {
-	display: none;
+    display: none;
 }
 
 /*===========================================
 RESPONSIVE NAVIGATION
 ===========================================*/
 @media screen and (max-width: 900px) {
-	.navigation a:not(:first-child) {display: none;}
-	.navigation a.icon {
-		float: right;
-		display: block;
-	}
+    .navigation a:not(:first-child) {
+        display: none;
+    }
 
-    .navigation a.not_icon:hover::after{
+    .navigation a.icon {
+        float: right;
+        display: block;
+    }
+
+    .navigation a.not_icon:hover::after {
         transform: scaleX(0);
     }
 }
 
 @media screen and (max-width: 900px) {
-.myTopHeader.responsive .navigation {position: relative;}
-	
-.myTopHeader.responsive .navigation a {
-		float: none;
-		display: block;
-		text-align: center;
-        margin: 10px;
-        
-  }
+    .myTopHeader.responsive .navigation {
+        position: relative;
+    }
+
+        .myTopHeader.responsive .navigation a {
+            float: none;
+            display: block;
+            text-align: center;
+            margin: 10px;
+        }
 }
-.myTopHeader.responsive .navigation{
+
+.myTopHeader.responsive .navigation {
     display: block;
 }
 
-.myTopHeader{
+.myTopHeader {
     flex-direction: row;
 }
 
-.myTopHeader.responsive{
-    flex-direction: column;
-}
+    .myTopHeader.responsive {
+        flex-direction: column;
+    }
 
 @media (min-width:900px) {
-    .myTopHeader.responsive{
+    .myTopHeader.responsive {
         flex-direction: row;
+    }
+}
+
+/*===========================================
+NOTIFICATION BAR
+===========================================*/
+.notification-bar {
+    width: 100%;
+    height: 50px; /* Adjust height as needed */
+    line-height: 50px; /* Center the text vertically */
+    max-width: 800px; /* Set your desired maximum width */
+    margin-bottom: 10px; /* Add margin for spacing between notifications */
+    margin-top: 100px;
+    position: relative;
+    background: #794FCD; /* Background color */
+    border-radius: 5px; /* Border radius */
+}
+
+.notification-title {
+    color: white;
+    font-size: 24px;
+    font-family: Raleway;
+    font-weight: 300;
+    word-wrap: break-word;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.notification-msg {
+    width: 100%;
+    max-width: 800px; /* Set your desired maximum width */
+    margin: auto; /* Center the content */
+    background: #FFFFFF; /* Background color */
+    border-radius: 20px; /* Border radius */
+    padding: 20px; /* Add padding for better visual appearance */
+    align-items: center; /* Center content vertically */
+    justify-content: center; /* Center content horizontally */
+    margin-bottom: 10px; /* Add margin for spacing between notifications */
+    margin-top: 10px;
+}
+
+.delete-msg a {
+    color: #FF0000;
+    text-decoration: none; /* Remove default underline */
+    cursor: pointer;
+    margin-left: 700px;
+}
+
+    .delete-msg a:hover {
+        text-decoration: underline; /* Underline on hover, adjust as needed */
+    }
+
+
+.no-notification-msg {
+    width: 100%;
+    color: #505050;
+    font-size: 24px;
+    font-family: Raleway;
+    font-weight: 200;
+    word-wrap: break-word;
+    text-align: center;
+}
+/* Media query for responsiveness */
+@media only screen and (max-width: 600px) {
+    .notification-bar {
+        max-width: 90%; /* Adjusted maximum width for smaller screens */
     }
 }
 
@@ -120,91 +208,160 @@ RESPONSIVE NAVIGATION
     Div row design
 ===========================================*/
 
-.row{
+.row {
     display: flex;
 }
+
 
 /*===========================================
     H2 style
 ===========================================*/
-h2.title{
+h2.title {
     text-align: center;
-    padding: 30px 0 10px 0;
+    padding: 70px 0 0 0;
+}
+
+/*===========================================
+    h3 that display info username, email etc
+===========================================*/
+
+h3.displayInfo {
+    font-weight: 400;
+    width: 80%;
+    margin: auto;
+}
+
+.user-display {
+    color: #4C2894;
+    font-size: 18px;
+    font-family: Raleway;
+    font-weight: 300;
+    word-wrap: break-word;
+    width: 30%;
+}
+
+.noti-sent {
+    color: #32CD32;
+    font-size: 18px;
+    font-family: Raleway;
+    font-weight: 300;
+    word-wrap: break-word;
 }
 
 /*===========================================
     Table style
 ===========================================*/
 
-table.Atable{
-    margin:auto;
+table.Atable {
+    margin: auto;
     border: 0;
     box-shadow: 1px 0 5px rgb(66, 66, 66);
 }
 
-table.Atable tr{
-    background-color: #fff;
-}
+    table.Atable tr {
+        background-color: #fff;
+    }
 
-table.Atable thead tr{
-    background-color: #794FCD;
-}
+    table.Atable thead tr {
+        background-color: #794FCD;
+    }
 
-table.Atable thead th{
-    color: #fff;
-}
+    table.Atable thead th {
+        color: #fff;
+    }
 
-table.Atable th,td{
-    border: 0;
-    padding: 10px;
-    text-align: center;
-}
+    table.Atable th, td {
+        border: 0;
+        padding: 5px;
+        text-align: center;
+    }
+
+
 
 /*===========================================
     Table responsive style
 ===========================================*/
 
-@media(max-width:650px){
-    .Atable{
+@media(max-width:650px) {
+    .Atable {
         border: 3px solid rgb(55, 53, 53);
     }
 
-    .Atable thead tr{
-        display: none;
-    }
+        .Atable thead tr {
+            display: none;
+        }
 
-    .Atable tr{
-        display: block; 
-    }
-    
-    .Atable th, .Atable td{
-        padding: 0.5em;
-    }
+        .Atable tr {
+            display: block;
+        }
 
-    .Atable td{
-        text-align: right;
-        display: block;
-        font-size: 1em;
-    }
+        .Atable th, .Atable td {
+            padding: 0.5em;
+        }
 
-    .Atable td.rowNumber{
-        background-color: #794FCD;
-        color: #EEF0F4;
-    }
+        .Atable td {
+            text-align: right;
+            display: block;
+            font-size: 1em;
+        }
 
-    .Atable td::before{
-        content: attr(data-title) ": ";
-        float:left;
-        font-weight: 900;
-       
-    }
+            .Atable td.rowNumber {
+                background-color: #794FCD;
+                color: #EEF0F4;
+            }
+
+            .Atable td::before {
+                content: attr(data-title) ;
+                float: left;
+                font-weight: 900;
+            }
 }
 
 /*===========================================
-    Search fine
+    Search 
+===========================================*/
+div.notification-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+    div.notification-form label {
+        color: #4C2894;
+        text-decoration: none;
+        font-weight: 600;
+        margin-bottom: 8px;
+    }
+
+    div.notification-form input[type="text"],
+    div.notification-form textarea {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+    }
+
+    div.notification-form input[type="submit"] {
+        border: 0;
+        text-decoration: none;
+        background-color: #4C2894;
+        color: #EEF0F4;
+        font-weight: 300;
+        padding: 10px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+
+/*===========================================
+    Search 
 ===========================================*/
 
-div.search{
+div.search {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -212,43 +369,36 @@ div.search{
     margin-bottom: 1em;
 }
 
-div.search label{
-    color: #794FCD;
-    font-weight: 600;
-}
+    div.search label {
+        color: #4C2894;
+        text-decoration: none;
+        font-weight: 600;
+    }
 
-div.search input[type="email"]{
-    border: 0;
-    border-radius: 3px;
-    padding: 8px;
-    margin: 0 5px 0 5px;
-}
+    div.search input[type="email"] {
+        border: 0;
+        border-radius: 3px;
+        padding: 8px;
+        margin: 0 5px 0 5px;
+    }
 
-div.search input[type="submit"]{
-    border: 0;
-    background-color: #4C2894;
-    color: #EEF0F4;
-    font-weight: 300;
-    padding: 7px;
-    border-radius: 3px;
-    cursor: pointer;
-}
+    div.search input[type="submit"] {
+        border: 0;
+        text-decoration: none;
+        background-color: #4C2894;
+        color: #EEF0F4;
+        font-weight: 300;
+        padding: 7px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
 
-/*===========================================
-    h3 that display info username, email etc
-===========================================*/
-
-h3.displayInfo{
-    font-weight: 400;
-    width: 80%;
-    margin: auto;
-}
 
 /*===========================================
     Not exist display
 ===========================================*/
 
-.not_exist{
+.not_exist {
     font-weight: 300;
     color: rgb(66, 66, 66);
     text-align: center;
@@ -256,11 +406,13 @@ h3.displayInfo{
     margin-bottom: 2em;
 }
 
+
+
 /*===========================================
     link btn style
 ===========================================*/
 
-a.link-btn{
+a.link-btn {
     background-color: #794FCD;
     color: #EEF0F4;
     text-decoration: none;
@@ -269,23 +421,12 @@ a.link-btn{
     border-radius: 3px;
 }
 
-/*===========================================
-    link btn style red
-===========================================*/
 
-a.link-btn-red{
-    background-color: #E44734;
-    color: #EEF0F4;
-    text-decoration: none;
-    font-weight: 300;
-    padding: 3px;
-    border-radius: 3px;
-}
 
 /*===========================================
     link to add style
 ===========================================*/
-.addlink{
+.addlink {
     font-weight: 300;
     text-decoration: none;
     display: block;
