--- a/css/style.css
+++ b/css/style.css
@@ -629,3 +629,255 @@ div.fineEditForm div input[type="submit"]{
         width: 75%;
     }
 }
+
+/*===========================================
+    login,register,profile,update,home css 
+===========================================*/
+
+.btn,
+.delete-btn{
+   width: 100%;
+   border-radius: 5px;
+   padding:10px 30px;
+   color:#EEF0F4;
+   display: block;
+   text-align: center;
+   cursor: pointer;
+   font-size: 20px;
+   margin-top: 10px;
+}
+
+.btn{
+    background-color: #794FCD;
+    text-decoration: none;
+    font-weight: 300;
+    padding:3px;
+    border-radius: 3px;
+}
+
+.btn:hover{
+    background-color: #503486;
+    text-decoration: none;
+    font-weight: 300;
+    padding: 3px;
+    border-radius: 3px;
+}
+
+.delete-btn{
+   background-color: #E44734;
+}
+
+.delete-btn:hover{
+   background-color: #c53120;
+}
+
+.message{
+   margin:10px 0;
+   width: 100%;
+   border-radius: 5px;
+   padding:10px;
+   text-align: center;
+   color:#4C2894;
+   font-size: 20px;
+}
+
+.form-container{
+   min-height: 100vh;
+   background-color: #EEF0F4;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding:20px;
+}
+
+.form-container form{
+   padding:20px;
+   background-color: #EEF0F4;
+   box-shadow:0 5px 10px rgba(0,0,0,.1);
+   text-align: center;
+   width: 400px;
+   border-radius: 5px;
+}
+
+.form-container form h3{
+   margin-bottom: 10px;
+   font-size: 30px;
+   color: #4C2894;
+   text-transform: uppercase;
+}
+
+.form-container form .box{
+   width: 100%;
+   border-radius: 5px;
+   padding:12px 14px;
+   font-size: 18px;
+   color:#4C2894;
+   margin:10px 0;
+   background-color: #EEF0F4;
+}
+
+.form-container form p{
+   margin-top: 15px;
+   font-size: 20px;
+   color: #4C2894;
+}
+
+.form-container form p a{
+   color:var(--red);
+}
+
+.form-container form p a:hover{
+   text-decoration: underline;
+}
+
+
+.container{
+   min-height: 10px;
+   background-color: var(--light-bg);
+   display: flex;
+   text-align: center;
+   justify-content: center;
+   padding:20px;
+}
+
+.container .profile{
+   padding:50px;
+   background-color: #eef3f4;
+   box-shadow:0 5px 10px rgba(0,0,0,.1);
+   text-align: center;
+   width: 500px;
+   border-radius: 5px;
+}
+
+.container .profile img{
+   height: 150px;
+   width: 150px;
+   border-radius: 50%;
+   object-fit: cover;
+   margin-bottom: 5px;
+}
+
+.container .profile h3{
+   margin:5px 0;
+   font-size: 20px;
+   color:#4C2894;
+}
+
+.container .profile td{
+    margin:5px 0;
+    font-size: 20px;
+    color:#4C2894;
+ }
+
+.container .profile p{
+   margin-top: 20px;
+   color:#4C2894;
+   font-size: 20px;
+}
+
+.container .profile p a{
+   color:var(--red);
+}
+
+.container .profile p a:hover{
+   text-decoration: underline;
+}
+
+.update-profile{
+   min-height: 100vh;
+   background-color: #EEF0F4;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding:20px;
+}
+
+.update-profile form{
+   padding:20px;
+   background-color: #EEF0F4;
+   box-shadow:0 5px 10px rgba(0,0,0,.1);
+   box-shadow: var(--box-shadow);
+   text-align: center;
+   width: 700px;
+   text-align: center;
+   border-radius: 5px;
+}
+
+.update-profile form img{
+   height: 200px;
+   width: 200p;
+   border-radius: 50%;
+   object-fit: cover;
+   margin-bottom: 5px;
+}
+
+.update-profile form .flex{
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 20px;
+   gap:15px;
+}
+
+.update-profile form .flex .inputBox{
+   width: 49%;
+}
+
+.update-profile form .flex .inputBox span{
+   text-align: left;
+   display: block;
+   margin-top: 15px;
+   font-size: 17px;
+   color:#4C2894;
+}
+
+.update-profile form .flex .inputBox .box{
+   width: 100%;
+   border-radius: 5px;
+   background-color: #eef3f4;
+   padding:12px 14px;
+   font-size: 17px;
+   color:var(--black);
+   margin-top: 10px;
+}
+
+.home_layout{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px;
+    text-align: center;
+    color: #4C2894;
+}
+
+.feature-button{
+    background-color: #EEF0F4; 
+    color: #4C2894; 
+    padding: 20px 40px; 
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px; 
+    margin: 4px 2px;
+    cursor: pointer;
+    border: 1px solid #333333;
+    border-radius: 5px; /* Rounded corners */
+    box-shadow:0 5px 10px rgba(0,0,0,.1);
+}
+
+.feature-button:hover {
+    background-color: #d9d3e3; /
+}
+
+@media (max-width:650px){
+   .update-profile form .flex{
+      flex-wrap: wrap;
+      gap:0;
+   }
+   .update-profile form .flex .inputBox{
+      width: 100%;
+   }
+}
+
+/*===========================================
+
+===========================================*/
